--- a/indix.html
+++ b/indix.html
@@ -11,7 +11,7 @@
         <img src="Netflix_2015_N_logo.svg.png" alt="">
     </div>
     <div class="h1">
-        <h1>Best 20 k-drama To Watch On Netfilx </h1>
+        <h1>Best 10 k-drama To Watch On Netfilx </h1>
     </div>
     <div class="body">
         <h1>1.</h1>
@@ -35,7 +35,71 @@
         <h1>Strong Girl Do Bong Soon</h1>
         <p>Do Bong-soon (Park Bo-young) was born with superhuman strength. Her strength is hereditary and passed along only to the women in her family. Her dream is to create a video game with herself as the main character. She desperately wants to become a delicate and elegant woman, which is the ideal type of her crush, In Guk-doo (Ji Soo), a police officer. Thanks to her strength, she gets a job as bodyguard to rich heir Ahn Min-hyuk (Park Hyung-sik), the CEO of a gaming company, Ainsoft. A series of kidnapping cases happen in Dobong-dong, the district Bong-soon lives in, and she is determined to catch the culprit, who targeted her best friend. With help and training from Min-hyuk, she manages to control her strength to use it for good causes. Min-hyuk and Bong-soon find their relationship growing into something more. Their relationship at work and in pursuit of the kidnapper creates comical and dangerous situations, which bring them closer.</p>
         <p><strong>Genres:</strong> Fantasy; Thriller; Action; Romantic comedy</p>
+        <a href="https://www.netflix.com/ng/title/80198001">Watch here</a>
+    </div>
+    <div class="body2">
+        <h1>4.</h1>
+        <img src="LOVEINTHEMOONLIGHT.jpg" alt="">
+        <h1>Love In The Moonlight</h1>
+        <p>Lee Yeong, a young prince, starts bonding with his political eunuch, Ra-on, who happens to be a girl merely pretending to be a man. However, with time, he realises that he is in love with Ra-on.</p>
+        <p><strong>Genres:</strong> Historical, Coming-of-age, Romantic-comedy.</p>
+        <a href="https://www.netflix.com/ng/title/80986896">Watch here</a>
+    </div>
+    <div class="body4">
+        <h1>5.</h1>
+        <img src="KING.jpg" alt="">
+        <h1>King The Land</h1>
+        <p>King the Land tells the story of Gu Won (Lee Jun-ho) who is the heir of The King Group, a luxury hotel conglomerate, who was thrown into an inheritance war, and Cheon Sa-rang (Im Yoon-ah), a hotelier who always has a smile on her face till she meets Gu Won.</p>
+        <p><strong>Genres:</strong> Romantic comedy.</p>
+        <a href="https://www.netflix.com/ng/title/81671440">Watch here</a>
+    </div>
+    <div class="body5">
+        <h1>6.</h1>
+        <img src="TRUE BEAUTY.jpg" alt="">
+        <h1>True Beauty</h1>
+        <p>This series is about Lim Ju-kyung, a high school student who always had a complex about her appearance since childhood. To hide her bare face, she started to wear heavy make-up. Her excellent make-up skills enhance her beauty, and persuade others that her beautiful, made-up face is her natural appearance. She befriends with her high school mate Lee Su-ho, a wealthy, but cold boy, and Han Seo-jun, an aggressive student with good talents. This plot follows Ju-kyung as she navigates her daily life and goal of becoming a cosmetologist.</p>
+        <p><strong>Genres:</strong> Romantic comedy, Slice of life, Coming-of-age.</p>
+        <a href="https://www.netflix.com/ng/title/81410834">Watch here</a>
+    </div>
+    <div class="body6">
+        <h1>6.</h1>
+        <img src="BUSINESSPROPOSAL.jpg" alt="">
+        <h1>Business Proposal</h1>
+        <p>In disguise as her friend, Ha-ri shows up on a blind date to scare away her friend's prospective suitor. However, plans go awry when he turns out to be Ha-ri's CEO and he makes a proposal.</p>
+        <p><strong>Genres:</strong> Romantic comedy, Slice of life, Coming-of-age.</p>
+        <a href="https://www.netflix.com/ng/title/81509440">Watch here</a>
+    </div>
+    <div class="body7">
+        <h1>7.</h1>
+        <img src="AAAABTroYekQaddNs-4SD-zHSBUX656J2MhhfGobDw0eUY8leOdzdzfeuFfQZvcjfWNT7qQB3gFmIZ1fCbaphK7VweRXG56O6pxFLQY.jpg" alt="">
+        <h1>Descendant Of The Sun</h1>
+        <p>A soldier belonging to the South Korean Special Forces falls in love with a beautiful surgeon. However, their relationship is short-lived as their professions keep them apart.</p>
+        <p><strong>Genres:</strong> Romantic comedy, Slice of life, Coming-of-age.</p>
+        <a href="https://www.netflix.com/ng/title/80123798">Watch here</a>
+    </div>
+    <div class="body8">
+        <h1>8.</h1>
+        <img src="BUSINESSPROPOSAL.jpg" alt="">
+        <h1>Business Proposal</h1>
+        <p></p>
+        <p><strong>Genres:</strong> Romantic, action, melodrama.</p>
         <a href="">Watch here</a>
+    </div>
+    <div class="body9">
+        <h1>9.</h1>
+        <img src="BUSINESSPROPOSAL.jpg" alt="">
+        <h1>Business Proposal</h1>
+        <p>In disguise as her friend, Ha-ri shows up on a blind date to scare away her friend's prospective suitor. However, plans go awry when he turns out to be Ha-ri's CEO and he makes a proposal.</p>
+        <p><strong>Genres:</strong> Romantic comedy, Slice of life, Coming-of-age.</p>
+        <a href="https://www.netflix.com/ng/title/81509440">Watch here</a>
+    </div>
+    <div class="body10">
+        <h1>10.</h1>
+        <img src="BUSINESSPROPOSAL.jpg" alt="">
+        <h1>Business Proposal</h1>
+        <p>In disguise as her friend, Ha-ri shows up on a blind date to scare away her friend's prospective suitor. However, plans go awry when he turns out to be Ha-ri's CEO and he makes a proposal.</p>
+        <p><strong>Genres:</strong> Romantic comedy, Slice of life, Coming-of-age.</p>
+        <a href="https://www.netflix.com/ng/title/81509440">Watch here</a>
     </div>
 
 </body>
